--- a/Source/qr_code.csproj
+++ b/Source/qr_code.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>qr_code</RootNamespace>
-    <AssemblyName>Утилита QR</AssemblyName>
+    <AssemblyName>Конструктор QR</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
